# pipeline

./: .gitignore  .kiln-scope  README.md
bread-forge/pipeline/: README.md  pyproject.toml
bread-forge/pipeline/src/pipeline/: __init__.py
bread-forge/pipeline/src/pipeline/budget/: __init__.py  tracker.py
bread-forge/pipeline/src/pipeline/cli/: __init__.py  main.py
bread-forge/pipeline/src/pipeline/cli/commands/: cycle.py  gate.py  run.py  telemetry.py  watch.py
bread-forge/pipeline/src/pipeline/config/: loader.py
bread-forge/pipeline/src/pipeline/cycle/: __init__.py  phase.py  runner.py  state_machine.py
bread-forge/pipeline/src/pipeline/dispatch/: __init__.py  agent.py
bread-forge/pipeline/src/pipeline/events/: __init__.py  types.py
bread-forge/pipeline/src/pipeline/gate/: __init__.py  actions.py
bread-forge/pipeline/src/pipeline/gate/widgets/: __init__.py  action_prompt.py  proposal_detail.py
bread-forge/pipeline/src/pipeline/lock/: __init__.py  orchestrator.py
bread-forge/pipeline/src/pipeline/store/: __init__.py  beadstore.py
bread-forge/pipeline/src/pipeline/suppression/: __init__.py  bead_writer.py  filter.py
bread-forge/pipeline/src/pipeline/telemetry/: __init__.py
bread-forge/pipeline/src/pipeline/trigger/: __init__.py  engine.py  schedule.py
bread-forge/pipeline/tests/: test_budget.py  test_cli.py  test_config.py  test_events.py  test_gate_actions.py  test_gate_app.py  test_lock.py  test_run_command.py  test_state_machine.py  test_status_command.py  test_store.py  test_suppression_cli.py  test_telemetry_command.py  test_trigger.py
tests/: test_dispatch.py  test_dispatcher.py  test_suppression_bead.py  test_suppression_filter.py  test_telemetry.py
(+15 files in other folders)
